# ssh-client

./: .gitignore  README.md  main.py  manage.py  mock_sshd.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  ssh.py  vite.config.js  webpack.config.js
app/: __init__.py  session_worker.py  worker.py
app/handlers/: base.py  http.py  websocket.py
app/main/: __init__.py  handler.py  worker.py
app/main/handlers/: base.py  http.py  index.py  websocket.py
assets/css/: app.css
assets/js/: index.js
assets/scss/: app.scss
docs/: deployment-guide.md
static/js/: app.js  index.js  main.min.js
static/scss/: _variables.scss  app.scss
static/styles/: app.scss  main.min.css
systemd/: wssh.service
templates/: index.html
views/: index.html
